--- a/mandelbulber2/formula/ui/transf_difs_clip_plane.ui
+++ b/mandelbulber2/formula/ui/transf_difs_clip_plane.ui
@@ -30,16 +30,9 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QLabel" name="label_21">
-     <property name="text">
-      <string>requires only 1 iteration</string>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
      <property name="text">
-      <string notr="true">zc = z (default zc = c)</string>
+      <string notr="true">zc = z (default zc = c, requires only 1 iteration)</string>
      </property>
     </widget>
    </item>
@@ -1016,7 +1009,7 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>0.000000000000000</double>
+           <double>-99.998999999999995</double>
           </property>
           <property name="maximum">
            <double>99.998999999999995</double>
