--- a/mandelbulber2/formula/ui/msltoe_sym4_mod1.ui
+++ b/mandelbulber2/formula/ui/msltoe_sym4_mod1.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>msltoe_sym4_mod1</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>880</width>
-    <height>2441</height>
+    <height>2814</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -154,7 +154,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_24">
           <property name="text">
-           <string>fabs():</string>
+           <string>abs():</string>
           </property>
          </widget>
         </item>
