Partially implemented light beams

--- a/mandelbulber2/qt/light_editor.ui
+++ b/mandelbulber2/qt/light_editor.ui
@@ -147,6 +147,11 @@
             <string>Projection</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>Beam</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item row="6" column="0">
